# tts_longeval

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
configs/: baselines.toml  dsm_tts.toml  dsm_tts_debug.toml  dsm_tts_debug_2.toml  librispeech.toml  mos.toml  seeden.toml
datasets/: libri_pc.jsonl  ntrex_eng.jsonl  ntrex_fra.jsonl  ntrex_n15_eng.jsonl  ntrex_n15_fra.jsonl  seed_en.jsonl  synth_dialogs_en.jsonl  synth_dialogs_fr.jsonl  synth_dialogs_n8_fr.jsonl  synth_dialogs_n9_en.jsonl  wikibooks_en.jsonl  wikibooks_fr.jsonl
external_tools/: pyproject.toml
external_tools/external_tools/: __init__.py  audio.py  speaker.py
external_tts/chatterbox/: external_tts_chatterbox.py  pyproject.toml  test_watermark.py
external_tts/csm/: external_tts_csm.py  pyproject.toml  test_watermark.py
external_tts/dia/: external_tts_dia.py  pyproject.toml
external_tts/dsm/: external_tts_dsm.py  external_turn_dsm.py  pyproject.toml  test_watermark.py
external_tts/moshi/: external_tts_moshi.py  test_watermark.py
external_tts/orpheus/: external_tts_orpheus.py  pyproject.toml
notebooks/: 20250929-analysis.ipynb  20250930-drift.ipynb
scripts/: make_voice_embeddings.py  process_ntrex.py  process_wikibooks.py
tts_longeval/: __init__.py  __main__.py  asr.py  config.py  data.py  drift.py  loadable.py  metrics.py  runner.py  speakersim.py  task.py  tts.py  utils.py  wavlm.py  wer.py  zmqueue.py
tts_longeval/normalizers/: __init__.py  basic.py  english.py  french.py  french_numbers.tsv
